Fix size of itemIcon on mobiles

--- a/src/pages/item/index.css
+++ b/src/pages/item/index.css
@@ -15,6 +15,11 @@
     font-weight: bold;
 }
 
+.item-icon {
+    width: 64px;
+    height: 64px;
+}
+
 .icon-and-link-wrapper {
     align-items: flex-start;
     display: none;
